# python_oop_e_com_model

./: .gitignore  pyproject.toml  requirements.txt
e_com_model/e_com/e_com/: settings.py  urls.py
e_com_model/e_com/e_com_store/: apps.py  img.py  models.py  urls.py  views.py
e_com_model/e_com/e_com_store/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py
e_com_model/e_com/e_com_store/static/css/: base.css
e_com_model/e_com/e_com_store/templates/: about.html  base.html  footer.html  home.html  navbar.html  product.html
