[tool.poetry]
name = "e-com-model"
version = "0.1.0"
description = ""
authors = ["prodhanm <mustafizur.prodhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
